minikube/deployments/cawebservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cawebservice
spec:
  type: LoadBalancer
  selector:
    app: cawebservice
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 30080
