minikube/deployments/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 9080
    targetPort: 80
    nodePort: 30000
